rnsc/tests/snapshots/error-parser-package_directive-label_as_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public label/MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that a label can be used as package name.
; This should produce an error because label: is a label, not an identifier.
; Expected: parser error about unexpected token

.class public MyClass
.package label:

.class_end
----- STDERR -----
[TODO] Warning: TODO: reserved-like identifier used as name
[W-001] Warning: missing super directive
   ╭─[ test_data/rns_integration/error/parser/package_directive/label_as_name.rns:5:1 ]
   │
 5 │ .class public MyClass
   │ ───┬──  
   │    ╰──── class 'MyClass' is missing a '.super' directive
   │ 
   │ Note: The .super directive is required to specify the superclass. Defaulting to 'java/lang/Object'.
───╯
----- HASH -----
a827c9850989de94b6ac1cf62d058d9bba35288141092dc8c9745f653100bd83
