rnsc/tests/snapshots/error-parser-package_directive-numeric_as_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public 123/MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that a numeric literal can be used as package name.
; This should produce an error because 123 is a number, not an identifier.
; Expected: parser error about unexpected token

.class public MyClass
.package 123

.class_end
----- STDERR -----
[W-001] Warning: missing super directive
   ╭─[ test_data/rns_integration/error/parser/package_directive/numeric_as_name.rns:5:1 ]
   │
 5 │ .class public MyClass
   │ ───┬──  
   │    ╰──── class 'MyClass' is missing a '.super' directive
   │ 
   │ Note: The .super directive is required to specify the superclass. Defaulting to 'java/lang/Object'.
───╯
----- JAVAP -----
Classfile <TEMP_DIR>/123/MyClass.class
  Last modified <DATE>; size 70 bytes
  SHA-256 checksum c9ca07a137c169f4c38ed01ce8c95d61854002235f780ad897b5f115a0262033
public class 123.MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // 123/MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // "123/MyClass"
  #4 = Utf8               123/MyClass
  #5 = Utf8               Code
{
}
