rnsc/tests/snapshots/error-parser-package_directive-type_hint_as_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public @string/MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that a type hint can be used as package name.
; This should produce an error because @string is a type hint, not an identifier.
; Expected: parser error about unexpected token

.class public MyClass
.package @string

.class_end
----- STDERR -----
[TODO] Warning: TODO: reserved-like identifier used as name
[W-001] Warning: missing super directive
   ╭─[ test_data/rns_integration/error/parser/package_directive/type_hint_as_name.rns:5:1 ]
   │
 5 │ .class public MyClass
   │ ───┬──  
   │    ╰──── class 'MyClass' is missing a '.super' directive
   │ 
   │ Note: The .super directive is required to specify the superclass. Defaulting to 'java/lang/Object'.
───╯
----- JAVAP -----
Classfile <TEMP_DIR>/@string/MyClass.class
  Last modified <DATE>; size 74 bytes
  SHA-256 checksum 926feed9ef2c2f07597ebf03282ee57d6be839f4407ebc0477edbecefb4ea62b
public class @string.MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // @string/MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // "@string/MyClass"
  #4 = Utf8               @string/MyClass
  #5 = Utf8               Code
{
}
