rnsc/tests/snapshots/error-parser-super_directive-missing_operand.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class MyClass
.super
----- STDERR -----
[E-020] Error: missing class name after '.super'
   ╭─[ test_data/rns_integration/error/parser/super_directive/missing_operand.rns:2:1 ]
   │
 2 │ .super
   │ ───┬──│ 
   │    ╰──── the '.super' directive requires a super class name as operand
   │       │ 
   │       ╰─ but class name is missing
   │ 
   │ Help: Provide a super class name after the '.super' directive, e.g.:
   │       .super <class_name>
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-020
───╯
----- HASH -----
not generated
