rnsc/tests/snapshots/error-parser-super_directive-multiple_definitions.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class MyClass

.super firstClass
.super secondClass
----- STDERR -----
[E-011] Error: multiple .super directives
   ╭─[ test_data/integration/error/parser/super_directive/multiple_definitions.rns:4:1 ]
   │
 3 │ .super firstClass
   │ ───┬──  
   │    ╰──── first .super directive defined here with super class 'firstClass'
 4 │ .super secondClass
   │ ───┬──  
   │    ╰──── but another .super directive defined here with super class 'secondClass'
   │ 
   │ Help: A class can only have one .super directive. Remove the duplicates.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-011
───╯
----- HASH -----
not generated
